--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -46,3 +46,50 @@
 .inline {
     display: flex;
 }
+
+.modal {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+  }
+
+.modal-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    max-width: 90%;
+    max-height: 90%;
+    overflow: auto;
+    box-shadow: 0 0 8px rgba(0,0,0,0.12), 0 32px 64px rgba(0,0,0,0.14);
+}
+
+/* Media Query for Responsive Behavior */
+@media (max-width: 768px) {
+    .modal-container {
+      width: 90%;
+    }
+  }
+  
+@media (min-width: 769px) {
+  .modal-container {
+    width: 60%;
+  }
+}
+
+.svg-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  user-select: none;
+}
