--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -17,6 +17,13 @@
     font-weight: 600;
     line-height: 52px;
 }
+
+.big {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 52px;
+
+}
 .column-flex {
     display: flex;
     flex-direction: column;
