first css variables and error handling v0

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,5 +1,8 @@
 .global {
     font-family: 'Segoe UI', 'Segoe UI Web (West European)', Roboto, 'Helvetica Neue', sans-serif;
+    --gap-inline: 6px;
+    --card-border-radius: 8px;
+    --button-border-radius: 4px
 }
 
 
@@ -69,7 +72,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    border-radius: 8px;
+    border-radius: var(--card-border-radius);
     max-width: 90%;
     max-height: 90%;
     overflow: auto;
