--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -14,7 +14,6 @@
 .title {
     font-size: 40px;
     font-weight: 600;
-    line-height: 52px;
 }
 .sub-title {
     font-size: 24px;
@@ -62,9 +61,17 @@
 
 
 .svg-container {
-  display: block;
+  display: flex;
   width: 24px;
   height: 24px;
+  border-radius: 100%;
+  user-select: none;
+}
+
+.big-svg-container {
+  display: flex;
+  width: 44px;
+  height: 44px;
   border-radius: 100%;
   user-select: none;
 }
