bug fix new project lock archive v0

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -130,3 +130,11 @@
   width: 100%;
 }
 
+
+.title-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  line-height: 52px;
+}
