--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -6,6 +6,9 @@
     --header-height: 70px;
     --sidebar-width: 300px
     --theme: #454cad;
+    --border-color: #e0e0e0;
+    --modified-cell-color: #f6f6f6;
+    --disabled-cell-color: #f3f3f3;
 }
 
 
