dault cap css dates validation

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -9,6 +9,7 @@
     --border-color: #e0e0e0;
     --modified-cell-color: #f6f6f6;
     --disabled-cell-color: #f3f3f3;
+    --option-secondary-color: #8f8f8f;
 }
 
 
